// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="Card"
  >
    <h4
      class="Card-title"
    >
      Funny Picture
    </h4>
    <img
      alt="Funny Picture"
      class="Card-image"
    />
    <small
      class="Card-small"
    >
      Image  of 3.
    </small>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot 2`] = `
<DocumentFragment>
  <div
    class="Card"
  >
    <h4
      class="Card-title"
    >
      Sad
    </h4>
    <img
      alt="Sad"
      class="Card-image"
    />
    <small
      class="Card-small"
    >
      Image  of 5.
    </small>
  </div>
</DocumentFragment>
`;
